2000-01-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Juergen added special handling for the
	NetworkAddress SMIv1 type.

	* tools/smiquery.c: Juergen fixed crash on unknown node and
	introduces SMIng notation for fully quallified identifiers.

2000-01-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Andrew Hood pointed out wrong typed constants.

	* test/Makefile.am: Andrew supplied a patch so that make check
	works even before make install.

2000-01-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/AGENTX-MIB: MIB module added.

2000-01-13  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Bert Helthuis pointed out an incorrect warning
	when SNMPv2-SMI is parsed. Fixed.

	* Juergen Schoenwaelder applied a lot of memory leak fixes, error
	detections and cleanups.
	
2000-01-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/MIP-MIB: Bert Helthuis gave a hint on a slight bug
	in MIP-MIB. Fixed.

2000-01-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added TRAP-TYPE handling. Changed
	ExtUTCTime handling.

2000-01-03  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: added revision by LAST-UPDATED clause for
	modules without any REVISION clause.

	* Juergen contributed another patch: SMIv1/SMIv2 scanner/parser
	now get numbers as numbers and not as strings. Fixed a Y2K bug in
	parser-smi.y. Make sure we use util_malloc() and friends
	everywhere. Added a length check for identifiers in SMIng. Rewrote
	the length checking code for SMIv1/SMIv2 to make it shorter.
	Removed malloc error checks that will never happen.

1999-12-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* Juergen contributed a lot of patches: some error cleanups,
	some scanner/parser cleanups, automatic SMI language recognition,
	and some more.

1999-12-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* added two IETF MIB modules.

	* fixed a recent bug on MODULE-COMPLIANCE statement parsing.
